# MultiSpec-GeoDiff-Demo

./: .gitignore  Design.md  FINAL_DEMO_REPORT.md  MultiSpec_GeoDiff_Demo_ImplementationPlan.md  README.md  REPRODUCIBILITY_AUDIT.md  Ref.md  demo_report.md  design_overview.md  proposal.md  pyproject.toml  requirements.txt
.github/workflows/: build-demo-pdf.yml  tests.yml
01_project_proposal/: proposal.md
01_project_proposal/latex/: submission.tex
02_demo_document/: DEMO说明.md  demo_report.md
02_demo_document/latex/: demo_report.tex
03_code/: requirements.txt  run_demo.py
03_code/src/: __init__.py  candidate_generator.py  data_loader.py  distance_head.py  metrics.py  reranker.py  spectra_encoder.py  spectra_preprocess.py  spectral_attention.py  tfn_transformer_stub.py  visualization.py
03_code/tests/: conftest.py  test_attention.py  test_data_loader.py  test_demo_runs.py  test_preprocess.py
04_data/: data_card.md  sample_query.jsonl
05_outputs/: ablation_results.csv  topk_candidates.csv  trace_log.json
06_notebook/: demo_pipeline.ipynb
audit_artifacts/reproducibility_check/: 00_environment.txt  02_pip_freeze.txt  output_comparison.md
data/samples/: candidate_library.csv  query_ir.csv  query_raman.csv
docs/: Submission_Revision_Report.md  demo_usage.md  implementation_notes.md
latex/: Makefile  submission.tex
latex/figures/: placeholder_multimodal_encoder.tex  (+1 more)
legacy/: README.md
notebooks/: demo_pipeline.ipynb
outputs/: demo_summary.md  topk_candidates.csv  trace_log.json
tests/: test_data_io.py  test_trace_log.py
(+117 files in other folders)
