[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multispec-geodiff-demo"
version = "0.1.0"
description = "Traceable MVP demo for multi-modal spectra-driven molecular structure inference"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI Codex"}]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "pyyaml",
  "tqdm",
  "notebook",
]

[project.optional-dependencies]
chem = ["rdkit"]
deep = ["torch"]

test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
